Fixed plants growth multiplier not synced to server